[package]
name = "reflected"
version = "0.1.0"
edition = "2021"
authors = ["Vladas Zakrevksis <146100@gmail.com>"]
description = "Something like reflection"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/VladasZ/reflected"
repository = "https://github.com/VladasZ/reflected"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
