[package]
name = "reflected"
version = "0.6.3"
edition = "2021"
authors = ["Vladas Zakrevksis <146100@gmail.com>"]
description = "Something like reflection"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/VladasZ/reflected"
repository = "https://github.com/VladasZ/reflected"

[dependencies]
chrono = { workspace = true }
rand = { workspace = true }
rust_decimal = { workspace = true }
