[package]
name = "reflected_proc"
version = "0.1.5"
edition = "2021"
authors = ["Vladas Zakrevksis <146100@gmail.com>"]
description = "Proc macro for reflected"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/VladasZ/reflected"
repository = "https://github.com/VladasZ/reflected"

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = {version = "1.0", features = ["full", "extra-traits"]}

