[package]
name = "tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { workspace = true }
rust_decimal = { workspace = true }

reflected = { path = "../reflected" }
reflected_proc = { path = "../reflected_proc" }
